chore: simply script - best way to get less error in scraping is by playing with the recorder speed

--- a/collect-urls.html
+++ b/collect-urls.html
@@ -17,7 +17,7 @@
 </tr>
 <tr><td>ajaxWaitAndWait</td><td><datalist><option></option></datalist></td><td></td>
 </tr>
-<tr><td>domWaitAndWait</td><td>3000<datalist><option>3000</option></datalist></td><td>3000</td>
+<tr><td>domWaitAndWait</td><td><datalist><option></option></datalist></td><td></td>
 </tr>
 <tr><td>storeAttribute</td><td>//video@src<datalist><option>//video@src</option></datalist></td><td>video</td>
 </tr>
